# UoC

./: .gitignore  ReadMe.md  mcp_server.py  pyproject.toml  requirements.txt  uoc_create.py
Templates/Jinja/: VETAssessmentMapping(CurrentUoC).docx
notebooks/: prepare_templates.ipynb  scrape_templates.ipynb  scrape_uoc.ipynb
src/: __init__.py  template_preparer.py  template_scraper.py  uoc_creator.py  uoc_scraper.py  utils.py
