[project]
name = "uoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "bs4>=0.0.2",
    "docxtpl>=0.19.1",
    "lxml>=5.3.1",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "requests-ntlm>=1.3.0",
    "fastmcp>=0.4.1",
]
